--- a/Games.html
+++ b/Games.html
@@ -33,19 +33,19 @@
 					<h1 class="page-title">Games</h1>
 					<ul id="Games">
 						<li>
-							<a href="whoops.html"><img src="./img/FireRun.png"></a>
+							<a href="whoops.html"><img src="./img/FireRun.PNG"></a>
 						</li>
 						<li>
-							<a href="whoops.html"><img src="./img/Grim.png"></a>
+							<a href="whoops.html"><img src="./img/Grim.PNG"></a>
 						</li>
 						<li>
-							<a href="whoops.html"><img src="./img/PTBoy.png"></a>
+							<a href="whoops.html"><img src="./img/PTBoy.PNG"></a>
 						</li>
 						<li>
-							<a href="whoops.html"><img src="./img/Samurai.png"></a>
+							<a href="whoops.html"><img src="./img/Samurai.PNG"></a>
 						</li>
 						<li>
-							<a href="whoops.html"><img src="./img/Slime.png"></a>
+							<a href="whoops.html"><img src="./img/Slime.PNG"></a>
 						</li>
 					</ul>
 				</article>
