--- a/Games.html
+++ b/Games.html
@@ -45,7 +45,7 @@
 							<a href="whoops.html"><img src="./img/Samurai.PNG"></a>
 						</li>
 						<li>
-							<a href="whoops.html"><img src="./img/Slime.PNG"></a>
+							<a href="whoops.html"><img src="./img/Slime.jpg"></a>
 						</li>
 					</ul>
 				</article>
