--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<nav>
 				<ul>
 					<li class="current"><a href="index.html">Home</a></li>
-					<li><a href="about.html">About Me</a></li>
+					<li><a href="About.html">About Me</a></li>
 					<li><a href="Games.html">Games</a></li>
 				</ul>
 				</nav>
